# tpfancontrol-rs

./: Cargo.toml  Makefile  README.md  config.toml.example
src/: acpi.rs  error.rs  main.rs  model.rs
